# city

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  docs.yml  release.yml
arch/: Amd64.arch  IR.arch  aarch64.arch  ir.arch
docs/diagrams/: Code Structure.drawio  Compilation Process.drawio
include/city/: ABI.h  Assembly.h  ByteBuffer.h  Function.h  Interop.h  JIT.h  Object.h  Symbol.h  Value.h  overload.h
include/city/arch/ir/: IRModule.h
include/city/backend/: Backend.h  IRTranslator.h  NativeInstruction.h  NativeModule.h
include/city/backend/aarch64/: AArch64.h  AArch64Condition.h  AArch64Function.h  AArch64FunctionTranslator.h  AArch64Module.h  AArch64RegisterBank.h
include/city/backend/amd64/: Amd64.h  Amd64Function.h  Amd64FunctionTranslator.h  Amd64Module.h  Amd64RegisterBank.h  Amd64Translator.h
include/city/container/: ConstantDataContainer.h  Container.h  Register.h  StackAllocationContainer.h  StubContainer.h
include/city/interface/: InterfaceFunction.h  InterfaceModule.h
include/city/ir/: IRBuilder.h  IRCondition.h  IRFunction.h  IRModule.h
include/city/ir/block/: IRBlock.h  IRConditionalBlock.h
include/city/ir/instruction/: IRBinaryInstruction.h  IRInstruction.h  InstructionFunctor.h
include/city/module/: Block.h  Function.h  Module.h  Value.h
include/city/module/container/: ConstantDataContainer.h  Container.h
include/city/runtime/: NativeMemoryHandle.h  Windows.h
include/city/transform/: Backend.h  IRTranslator.h  NativeInstruction.h
include/city/transform/aarch64/: AArch64.h  AArch64Condition.h  AArch64FunctionTranslator.h  AArch64RegisterBank.h  architecture.txt
include/city/transform/amd64/: Amd64FunctionTranslator.h  Amd64RegisterBank.h
include/city/transform/dbg/: DebugPrinter.h
include/city/transform/ir/: architecture.txt
include/city/type/: FloatingPointType.h  FunctionType.h  PointerType.h  ScalarType.h  Type.h
include/city/value/: ConstantValue.h  Value.h
lib/: Assembly.cpp  Function.cpp  JIT.cpp  Object.cpp  Symbol.cpp  Value.cpp
lib/arch/aarch64/: AArch64Function.cpp
lib/arch/ir/block/: IRBlock.cpp  IRConditionalBlock.cpp
lib/backend/: Backend.cpp  IRTranslator.cpp  NativeInstruction.cpp  NativeModule.cpp
lib/backend/aarch64/: AArch64.cpp  AArch64.h  AArch64Condition.cpp  AArch64Function.cpp  AArch64FunctionTranslator.cpp  AArch64Module.cpp
lib/backend/aarch64/instruction/: AArch64Instruction.cpp  AArch64Instruction.h
lib/backend/amd64/: Amd64.cpp  Amd64Function.cpp  Amd64FunctionTranslator.cpp  Amd64Module.cpp  Amd64Translator.cpp
lib/backend/amd64/container/: Amd64Register.cpp  Amd64RegisterLoader.cpp
lib/backend/amd64/instruction/: Amd64Instruction.cpp
lib/container/: ConstantDataContainer.cpp  Container.cpp  Register.cpp  StackAllocationContainer.cpp  StubContainer.cpp
lib/interface/: InterfaceFunction.cpp  InterfaceModule.cpp
lib/ir/: IRBuilder.cpp  IRFunction.cpp  IRModule.cpp
lib/ir/block/: IRBlock.cpp  IRConditionalBlock.cpp
lib/ir/instruction/: IRBinaryInstruction.cpp  IRInstruction.cpp
lib/ir/instruction/arithmetic/: AddInst.cpp  CmpInst.cpp  DivInst.cpp  FAddInst.cpp  MulInst.cpp  SubInst.cpp
lib/ir/instruction/control/: CallInst.cpp  RetInst.cpp
lib/runtime/: MacOS.cpp  NativeMemoryHandle.cpp  Windows.cpp
lib/transform/: Backend.cpp  IRTranslator.cpp  NativeInstruction.cpp  NativeModule.cpp
lib/transform/aarch64/: AArch64Condition.cpp  AArch64FunctionTranslator.cpp
lib/transform/aarch64/instruction/: AArch64Instruction.cpp
lib/transform/amd64/: Amd64Function.cpp  Amd64FunctionTranslator.cpp
lib/transform/amd64/instruction/: Amd64Instruction.cpp
lib/value/: ConstantValue.cpp  Value.cpp
src/: Assembly.cpp  Assembly.h  ByteBuffer.h  Container.h  JIT.cpp  JIT.h  Object.cpp  Object.h  Symbol.h  Value.cpp
src/backend/: Backend.cpp  Backend.h  IRTranslationInterface.h  IRTranslator.h  NativeInstruction.cpp  NativeInstruction.h  NativeModule.cpp  NativeModule.h
src/backend/aarch64/: AArch64.h
src/backend/amd64/: Amd64.cpp  Amd64.h  Amd64Builder.cpp  Amd64Builder.h  Amd64Module.cpp  Amd64Module.h  Amd64Register.cpp  Amd64Register.h  Amd64Translator.cpp  Amd64Translator.h
src/backend/amd64/container/: Amd64ContainerFunctor.cpp  Amd64ContainerFunctor.h  Amd64Register.cpp  Amd64Register.h  Amd64RegisterLoader.cpp
src/backend/amd64/instruction/: Amd64Instruction.cpp  Amd64Instruction.h
src/backend/x86/: x86.cpp  x86.h  x86ModRM.h  x86Register.cpp  x86Register.h  x86TranslationInterface.cpp  x86TranslationInterface.h
src/backend/x86/instruction/: x86Instruction.cpp  x86Instruction.h  x86ModRM.cpp  x86ModRM.h
src/container/: CompileTimeConstant.cpp  CompileTimeConstant.h  ConstantDataContainer.cpp  Container.cpp  Container.h
src/ir/: Assembly.cpp  Assembly.h  Block.cpp  Block.h  Builder.cpp  Builder.h  Compiler.cpp  Compiler.h  Container.cpp  Container.h  Function.cpp  Function.h  IRBlock.cpp  IRBlock.h  IRBuilder.cpp  IRBuilder.h  IRFunction.cpp  IRFunction.h  IRModule.cpp  IRModule.h  JIT.cpp  JIT.h  Module.cpp  Module.h  Object.cpp  Object.h  Symbol.cpp  Symbol.h
src/ir/block/: IRBlock.cpp  IRBlock.h
src/ir/instruction/: IRBinaryInstruction.cpp  IRBinaryInstruction.h  IRInstruction.cpp  IRInstruction.h  Instruction.cpp  Instruction.h  InstructionFunctor.h
src/ir/instruction/arithmetic/: AddInst.cpp  AddInst.h  SubInst.cpp  SubInst.h
src/ir/type/: Type.h
src/ir/value/: ConstantValue.cpp  ConstantValue.h  PointerValue.cpp  PointerValue.h  Value.cpp  Value.h
src/runtime/: ExecutableMemoryHandle.cpp  ExecutableMemoryHandle.h  MacOS.cpp  MacOS.h  NativeMemoryHandle.cpp  NativeMemoryHandle.h  Runtime.h  Windows.cpp
src/type/: Type.cpp  Type.h
src/value/: ConstantValue.cpp  ConstantValue.h  Value.cpp  Value.h
test/: amd64.test.cpp  arithmetic.test.cpp  branching.test.cpp  city.test.cpp  functional.test.cpp  jit.test.cpp  jit.test.h  module.test.cpp
test/arch/: ir.test.cpp
tools/archc/: README.md  archc.js  package-lock.json  package.json  parser.js
(+99 files in other folders)
